```mermaid
erDiagram
    USERS ||--o{ HOMESTAYS : "hosts"
    USERS ||--o{ BOOKINGS : "makes"
    USERS ||--o{ REVIEWS : "writes"
    HOMESTAYS ||--o{ BOOKINGS : "receives"
    HOMESTAYS ||--o{ REVIEWS : "has"
    BOOKINGS ||--|| REVIEWS : "generates"
    BOOKINGS ||--|| PAYMENTS : "initiates"

    USERS {
        int id PK
        string name
        string email UK
        string password
        string role "tourist | host | admin"
        string phone
        string preferred_language
        datetime created_at
    }

    HOMESTAYS {
        int id PK
        int host_id FK
        string title_en
        string title_ne
        string district "77 Nepal Districts"
        string village
        float latitude "PostGIS ST_Point"
        float longitude "PostGIS ST_Point"
        float price_per_night
        int capacity
        string cultural_tag "Gurung | Sherpa | Tharu | Newari | Thakali"
        json amenities
        json images
        int is_verified
    }

    BOOKINGS {
        int id PK
        int homestay_id FK
        int tourist_id FK
        date check_in
        date check_out
        int guests
        float total_amount
        string status "pending | confirmed | cancelled | completed"
    }

    REVIEWS {
        int id PK
        int booking_id FK
        int homestay_id FK
        int tourist_id FK
        int rating "1-5 Stars"
        int cultural_experience_rating "1-5 Stars"
        string comment
    }

    PAYMENTS {
        int id PK
        int booking_id FK
        string gateway "esewa | khalti | fonepay"
        string transaction_id UK
        float amount
        string status "initiated | success | failed"
        json gateway_response
    }
```
